# bcoder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bcoder/: __init__.py  encoder.py  errors.py
src/bencoder/: common.py  decoder.py  encoder.py  errors.py
