[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bcoder"
version = "1.1"
authors = [
    {name = "Mykola Bezrukyi", email = "kolya.bezrukiy.03@gmail.com"},
]
description = "Tool to decode and encode .torrent files"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/mbezrukyi/bcoder"

[tool.setuptools.packages.find]
where = ["src"]
